# py-generic-boilerplate

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .pyproject.toml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: pr.yaml  push.yaml
src/: main.py
src/py_generic_boilerplate/: main.py
tests/: test_main.py
