[tool.poetry]
name = "py-generic-boilerplate"
version = "0.1.0"
description = "Boilerplate to kick-off your python service."
authors = ["Aleksandar Babic <aleksandar@cloudhat.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
radon = "^6.0.1"
bandit = "^1.7.8"
assertpy = "^1.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
responses = "^0.25.0"
mypy = "^1.9.0"
requests = "^2.31.0"
types-jsonschema = "^4.21.0.20240331"
pre-commit = "^3.7.0"
safety = "^3.1.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = "src"
strict = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[tool.bandit]
recursive = true
